syntax = "proto3";

package planetworker;

service PlanetWorker {
  rpc Send (SendRequest) returns (SendResponse);
}

message SendRequest {
  string payload = 1;
  map<string, string> headers = 2;
  uint32 delayMs = 3;
  string target = 4;
}

message SendResponse {
  bool acknowledged = 1;
  string planetId = 2;
  string galaxyId = 3;
  string target = 4;
  string processedAt = 5;
  string payload = 6;
}
